--- a/about/index.html
+++ b/about/index.html
@@ -52,12 +52,12 @@
   
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-29103248-7"></script>
     <script>
-      if (CONFIG.hostname === location.hostname) {
+      // if (CONFIG.hostname === location.hostname) {
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
         gtag('config', 'UA-29103248-7');
-      }
+     // }
     </script>
 
 
